# ZEN

./: .gitignore  README.md  Tutorial.md  ci.sh
SIMD/: simd_batch2.py  simd_batch4.py
vector-dot-microbench/: Cargo.toml  bench.txt  bench_diff_constant_ratio.txt  bench_new.txt  bench_with_coeff.txt
zen-accuracy-arkworks/: Cargo.toml  run.sh
zen-accuracy-arkworks/examples/: lenet_medium_cifar_poseidon.rs  lenet_small_cifar_poseidon.rs  shallownet_poseidon.rs
zen-accuracy-arkworks/pretrained_model/LeNet_CIFAR_pretrained/: LeNet_Medium_conv2_weight_s.txt  LeNet_Medium_linear1_weight_s.txt  LeNet_Small_conv1_output_s.txt  LeNet_Small_conv3_weight_q.txt  X_s.txt
zen-accuracy-arkworks/pretrained_model/LeNet_ORL_pretrained/: LeNet_Large_conv1_weight_s.txt  LeNet_Large_linear1_weight_s.txt  LeNet_Large_linear2_weight_q.txt  LeNet_Small_conv1_weight_z.txt  LeNet_Small_conv2_output_s.txt  LeNet_Small_conv2_weight_s.txt  LeNet_Small_conv3_weight_s.txt
zen-accuracy-arkworks/pretrained_model/shallownet/: l2_weight_s.txt
zen-accuracy-arkworks/src/: argmax_circuit.rs  avg_pool_circuit.rs  cosine_circuit.rs  fc_circuit.rs  full_circuit.rs  lenet_circuit.rs  pedersen.rs  pedersen_params.rs  psponge.rs  r1cs.rs  read_inputs.rs  relu_circuit.rs
zen-arkworks/: Cargo.toml  README.md  run.sh
zk-ml-accuracy/: Cargo.toml
zk-ml-accuracy/pretrained_model/LeNet_CIFAR_pretrained/: LeNet_CIFARLeNet_Smallclassification.txt  LeNet_Medium_conv3_output_q.txt  LeNet_Medium_conv3_weight_s.txt  LeNet_Medium_linear1_output_s.txt  LeNet_Medium_linear2_output_q.txt  LeNet_Medium_linear2_output_s.txt  LeNet_Small_avgpool2_output_q.txt  LeNet_Small_conv2_weight_q.txt  LeNet_Small_conv3_output_q.txt  LeNet_Small_conv3_weight_s.txt  LeNet_Small_linear1_output_q.txt  LeNet_Small_linear2_output_s.txt  LeNet_Small_linear2_weight_s.txt
zk-ml-accuracy/pretrained_model/LeNet_ORL_pretrained/: LeNet_Large_conv1_weight_q.txt  LeNet_Large_conv2_weight_q.txt  LeNet_Large_conv2_weight_z.txt  LeNet_Large_conv3_output_s.txt  LeNet_Large_conv3_weight_q.txt  LeNet_Large_linear1_output_q.txt  LeNet_Medium_conv1_output_s.txt  LeNet_Medium_conv1_weight_q.txt  LeNet_Medium_conv1_weight_z.txt  LeNet_Medium_conv2_output_q.txt  LeNet_Medium_conv2_weight_s.txt  LeNet_Medium_conv2_weight_z.txt  LeNet_Medium_linear1_output_s.txt  LeNet_Medium_linear1_weight_s.txt  LeNet_Medium_linear2_output_s.txt  LeNet_ORL_accuracy.txt  LeNet_Small_conv1_output_q.txt  LeNet_Small_conv1_output_s.txt  LeNet_Small_conv2_weight_q.txt  LeNet_Small_conv2_weight_z.txt  LeNet_Small_conv3_output_s.txt  LeNet_Small_conv3_weight_z.txt  LeNet_Small_linear1_output_q.txt  LeNet_Small_linear1_output_s.txt  LeNet_Small_linear1_weight_q.txt  LeNet_Small_linear1_weight_z.txt  LeNet_Small_linear2_output_q.txt  LeNet_Small_linear2_output_s.txt  LeNet_Small_linear2_weight_q.txt  X_q.txt  X_s.txt  person_feature_vector.txt
zk-ml-accuracy/pretrained_model/shallownet/: l1_weight_q.txt  l1_weight_s.txt  l2_output_q.txt
zk-ml-accuracy/src/: argmax_circuit.rs  avg_pool_circuit.rs  commit_circuit.rs  conv_circuit.rs  cosine_circuit.rs  full_circuit.rs  lenet_circuit.rs  lib.rs  mul_circuit.rs  pedersen_commit.rs  read_inputs.rs  vanilla.rs
zk-ml-accuracy/src/test/: forward_correctness_check_lenet_small.rs
zk-ml-baseline/: Cargo.toml  readme.md  run.sh
zk-ml-private-model/: Cargo.toml  run.sh
zk-ml-private-model-baseline/: Cargo.toml  run.sh
(+336 files in other folders)
